appId: com.ihfazh.hayyabaca
flows:
  reward_redemption:
    commands:
      - launchApp
      - runFlow: ensure_logged_in.yaml
      - tapOn: "Permainan"
      - waitForAnimationToEnd
      - assertVisible: "Permainan"
      - assertVisible:
          contains: "koin"
      - tapOn:
          contains: "koin"
        continueOnFail: true
